--- a/lab2/journal.html
+++ b/lab2/journal.html
@@ -14,7 +14,7 @@ page; you do not need to modify this. -->
 
 <link rel="stylesheet" type="text/css"
 
-href="http://kgau.ru/istiki/study/labs/journal/basic.css" title="style" />
+href="http://www.kgau.ru/istiki/study/labs/journal/basic.css" title="style" />
 
 <!-- This is linking to your stylesheet, journal_layout.css -->
 
@@ -44,7 +44,7 @@ title="style" />
 
 <img
 
-src="http://kgau.ru/istiki/study/labs/journal/images/Eat-Crabs2.jpg" alt="Инструменты
+src="http://www.kgau.ru/istiki/study/labs/journal/images/Eat-Crabs2.jpg" alt="Инструменты
 
 для крабов" />
 
@@ -82,7 +82,7 @@ appear below any floating content, so the journal entry will be large enough.
 
 <img
 
-src="http://kgau.ru/istiki/study/labs/journal/images/Eat-Crabs3.jpg" alt="Инструменты
+src="http://www.kgau.ru/istiki/study/labs/journal/images/Eat-Crabs3.jpg" alt="Инструменты
 
 для крабов" />
 
